--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Alessandro & Sara - Viaggio di Nozze in Giappone</title>
+  <title>I miei 50 ✨</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      background-image: url('sfondo japanese.png'); /* Assicurati che il percorso sia corretto */
+      background-image: url('sfondo.jpg'); /* Inserisci il tuo sfondo */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -20,7 +20,7 @@
       justify-content: center;
       text-align: center;
       font-family: 'Playfair Display', serif;
-      overflow: hidden; /* Mantiene l'overlay nascosto inizialmente */
+      overflow: hidden;
     }
 
     .overlay {
@@ -32,16 +32,15 @@
       max-width: 800px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       color: white;
-      opacity: 0; /* Inizia completamente trasparente */
-      transform: translateY(20px); /* Inizia leggermente spostato verso il basso */
-      /* MODIFICA QUI: Aggiunto '3s' come delay prima di 'forwards' */
-      animation: fadeIn 7s ease 1.2s forwards;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeIn 2s ease forwards;
     }
 
     @keyframes fadeIn {
       to {
-        opacity: 1; /* Diventa completamente opaco */
-        transform: translateY(0); /* Torna alla posizione originale */
+        opacity: 1;
+        transform: translateY(0);
       }
     }
 
@@ -61,6 +60,8 @@
       margin-top: 30px;
       font-weight: bold;
       font-size: 1.3rem;
+      background-color: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.3);
       color: #000;
       padding: 15px;
@@ -78,14 +79,14 @@
     .copied-msg {
       display: none;
       margin-top: 10px;
-      font-size: 0.5rem; /* Ridimensionato leggermente */
+      font-size: 1rem;
       color: #000;
-      background-color: transparent;
-      background: rgba(255,255,255,0.25);
+      background: rgba(255,255,255,0.8);
       padding: 8px;
       border-radius: 8px;
     }
 
+    /* Responsive */
     @media (max-width: 600px) {
       .overlay {
         padding: 30px;
@@ -107,76 +108,64 @@
     }
 
     .music-button {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        z-index: 99;
-        background-color: transparent;
-        border: 1px solid rgba(255,255,255,0.5);
-        padding: 10px 15px;
-        border-radius: 10px;
-        font-family: 'Playfair Display', serif;
-        font-size: 1rem;
-        cursor: pointer;
-        color: #fff;
-        backdrop-filter: none; /* Rimosso blur per performance/estetica */
-      }
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 99;
+      background-color: transparent;
+      border: 1px solid #fff;
+      padding: 10px 15px;
+      border-radius: 10px;
+      font-family: 'Playfair Display', serif;
+      font-size: 1rem;
+      cursor: pointer;
+      color: #fff;
+    }
 
     .music-button:hover {
-      background-color: rgba(255,255,255,0.1);
+      background-color: rgba(255,255,255,0.15);
     }
   </style>
 </head>
 <body>
   <div class="overlay">
-    <h1>恋の旅 "koi no tabi"<br>  Viaggio d'Amore ❤️</h1>
+    <h1>恋の旅 "koi no tabi"<br>Viaggio d'Amore ❤️</h1>
     <p>
-      L'espressione indica un'esperienza legata all'amore e alle emozioni che ne derivano.<br>
-      Può riferirsi sia a un viaggio fisico che metaforico: è un percorso di scoperta e crescita personale attraverso il sentimento dell'amore.<br>
-      Se volete potete aiutarci a realizzare questo nostro sogno riempiendo le valigie...<br> di bei ricordi ed emozioni!<br>Arigatō! 🍣🎎
+      Il regalo più bello è  la tua presenza,<br>
+ma se vuoi comunque donarmi qualcosa da ricordare<br>
+ti sarei grata se contribuissi a realizzare il mio sogno<br>
+di visitare l'oriente<br>
+così mi avrai regalato la cosa più preziosa: un'emozione!
     </p>
     <div class="iban" id="iban-text" onclick="copyIBAN()">
-      IBAN: IT57I0306234210000002936209<br>
-      Intestatari: Sara Pioppi, Alessandro Nicolini
+      IBAN: IT5010849168872000110100981<br>
+      Intestatari: Mariachiara Miliozzi
     </div>
     <div class="copied-msg" id="copied-msg">✅ IBAN copiato!</div>
   </div>
 
-
+  <!-- AUDIO DI SOTTOFONDO -->
   <audio id="bg-music" autoplay loop>
-    <source src="brooklyn-duo-a-thousand-years-wedding-version_f7Oh6Sq1.mp3" type="audio/mpeg">
-    Il tuo browser non supporta l'elemento audio.
+    <source src="Coldplay - A Sky Full Of Stars (Lyrics).mp3" type="audio/mpeg">
+    Il tuo browser non supporta l'audio HTML5.
   </audio>
 
+  <!-- PULSANTE ON/OFF AUDIO -->
   <button class="music-button" onclick="toggleMusic()">🎵 Musica: On/Off</button>
 
+  <!-- SCRIPT PER IBAN E MUSICA -->
   <script>
     function copyIBAN() {
-      // Estrae solo il testo IBAN e Intestatari
-      const ibanElement = document.getElementById('iban-text');
-      const ibanFullText = ibanElement.innerText; // Prende tutto il testo visibile
-
-      // Usa l'API Clipboard per copiare
-      navigator.clipboard.writeText(ibanFullText).then(() => {
+      const ibanText = document.getElementById('iban-text').innerText;
+      navigator.clipboard.writeText(ibanText).then(() => {
         const msg = document.getElementById('copied-msg');
         msg.style.display = 'block';
-        setTimeout(() => { msg.style.display = 'none'; }, 2000); // Nasconde dopo 2 sec
-      }).catch(err => {
-        console.error('Errore nel copiare l\'IBAN: ', err);
-        // Potresti mostrare un messaggio di errore all'utente qui
+        setTimeout(() => { msg.style.display = 'none'; }, 2000);
       });
     }
 
     const audio = document.getElementById("bg-music");
-    // Imposta un volume iniziale più basso
     audio.volume = 0.2;
-
-    // Tenta di avviare l'audio solo dopo un'interazione dell'utente se l'autoplay fallisce
-    document.body.addEventListener('click', () => {
-        if (audio.paused) {
-            audio.play().catch(e => console.log("Autoplay bloccato, serve interazione utente."));
-        }
-    }, { once: true }); // Esegui solo una volta al primo click
 
     function toggleMusic() {
       if (audio.paused) {
@@ -185,14 +174,6 @@
         audio.pause();
       }
     }
-
-     // Assicura che l'audio parta (se possibile) al caricamento
-     window.addEventListener('load', () => {
-        audio.play().catch(e => {
-             console.log("Autoplay della musica potrebbe essere bloccato dal browser.");
-             // Potresti mostrare un'icona 'play' sul bottone musica
-        });
-     });
   </script>
 </body>
 </html>
