--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1>恋の旅 "koi no tabi"<br>Viaggio d'Amore ❤️</h1>
+    <h1>I miei 50 ✨</h1>
     <p>
       Il regalo più bello è  la tua presenza,<br>
 ma se vuoi comunque donarmi qualcosa da ricordare<br>
