--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: white;
       opacity: 0;
       transform: translateY(20px);
-      animation: fadeIn 2s ease forwards;
+      animation: fadeIn 4s ease forwards;
     }
 
     @keyframes fadeIn {
@@ -47,7 +47,7 @@
     h1 {
       font-size: 3rem;
       margin-bottom: 20px;
-      color: #000;
+      color: #fff;
     }
 
     p {
@@ -63,7 +63,7 @@
       background-color: rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.3);
-      color: #000;
+      color: #fff;
       padding: 15px;
       border-radius: 12px;
       word-break: break-word;
