--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       Il regalo più bello è  la tua presenza,<br>
 ma se vuoi comunque donarmi qualcosa da ricordare<br>
 ti sarei grata se contribuissi a realizzare il mio sogno<br>
-di visitare l'oriente<br>
+di visitare l'Oriente<br>
 così mi avrai regalato la cosa più preziosa: un'emozione!
     </p>
     <div class="iban" id="iban-text" onclick="copyIBAN()">
